# Adler-Graph-Reader

./: .gitignore  CLAUDE.md  CLAUDE_NEXT_STEPS.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  STATUS_REPORT.md  batch_extract.py  extract_concepts_safe.py  main.py  package-lock.json  pyproject.toml  rebuild_relations.py  test-report.md  test_batch_capacity.py  test_chonkie_integration.py  test_enhanced_prompt.py  test_llm_client.py  test_lmstudio.py  test_ml_content.md  test_mlx.py  test_small.md  test_small.txt
exports/: Designing Machine Learning Systems.graphml
memory/: PROGRESS.md  TECHNICAL_DESIGN.md
scripts/: quickstart.sh  verify_concept_extraction.py
src/adler_graph_reader/: __init__.py  __main__.py  cli.py  config.py  database.py  ui.py
src/adler_graph_reader/api/: __init__.py  main.py  models.py
src/adler_graph_reader/chunking/: __init__.py  chonkie_splitter.py  simple_splitter.py
src/adler_graph_reader/embeddings/: __init__.py  provider.py
src/adler_graph_reader/export/: __init__.py  graphml.py
src/adler_graph_reader/knowledge/: __init__.py  extractor.py  graph.py  graph_models.py  models.py  progress.py
src/adler_graph_reader/llm/: __init__.py  client.py  models.py
src/adler_graph_reader/output/: __init__.py  markdown.py  writer.py  (+1 more)
tests/: test_api.py  test_concept_extraction_coverage.py  test_database.py  test_embeddings.py  test_export_graphml.py  test_knowledge_extractor.py  test_parser.py  test_search_engine.py
ui/backend/: __init__.py  main.py
ui/frontend/: PROGRESS.md  index.html  package-lock.json  package.json  vite.config.ts
(+35 files in other folders)
