[project]
name = "adler-graph-reader"
version = "0.1.0"
description = "艾德勒图谱阅读器 - Extract structured knowledge from PDFs/EPUBs"
requires-python = ">=3.12"
dependencies = [
    "chonkie>=0.5.0",
    "ebooklib>=0.20",
    "graphviz>=0.20",
    "instructor>=1.14.5",
    "mobi>=0.3.3",
    "mlx-lm>=0.30.7",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "sentence-transformers>=5.2.3",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
adler = "adler_graph_reader.cli:main"

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.package]
source = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
